CSS fixes for overlapping media button on campaign page.

--- a/themes/custom/cafb_dc/sass/components/_fundraise-workflow.scss
+++ b/themes/custom/cafb_dc/sass/components/_fundraise-workflow.scss
@@ -162,6 +162,14 @@
       display: none;
     }
   }
+
+  #edit-field-story-media {
+    padding-bottom: 0.001em;
+
+    .media-widget {
+      margin-top: 1.5em;
+    }
+  }
 }
 
 @include xsmall {
